# bash-condexp

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
devdocs/: BASH-CONDITIONAL-EXPRESSIONS.md  LIMITATIONS.md  PLAN.md
examples/: condexp.rs
src/: ast.rs  env.rs  error.rs  eval.rs  fs_abs.rs  lex.rs  lib.rs  parse.rs  pattern.rs
tests/: combinators.rs  cond_ported.rs  conformance.rs
